--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!--Header-->
     <div id="barra">
-        <h1>Jason Welch</h1>
+        <i class="fa-solid fa-code" id="icono-header"></i>
         <ul id="barra-lista">
             <li><a href="index.html" >Inicio</a></li>
             <li><a href="#" >Proyectos</a></li>
@@ -25,6 +25,7 @@
     
     <div id="presentacion">
         <img src="img/perfil.jpg" alt="Selfie de Jason Welch" id="selfieJason">
+        <h1>Jason Welch</h1>
         <div id="presentacion-contenedor">
             <div class="descripcion">
                 <h2>Sobre mi</h2>
