Cambio de header

--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
     <div id="presentacion">
         <img src="img/perfil.jpg" alt="Selfie de Jason Welch" id="selfieJason">
         <h1>Jason Welch</h1>
-        <div id="presentacion-contenedor">
-            <div class="descripcion">
+        <h2>Full Stack Developer</h2>
+       <!-- <div id="presentacion-contenedor">
+            <div id="sobre-mi">
                 <h2>Sobre mi</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque possimus mollitia eos corrupti harum soluta nihil facilis facere, quidem cupiditate? Harum obcaecati natus repudiandae, deserunt ullam consequatur reiciendis assumenda.</p>
             </div>
-        <!--<div class="descripcion">
-                <p></p>
-                <p></p>
+        <div class="descripcion">
+                <p><strong>Nombre: </strong>Jason Welch</p>
+                <p><strong>Teléfono: </strong>012-3456789</p>
+                <p><strong>Edad: </strong>25</p>
                 <p></p>
             </div>
-        -->
         </div>
-        
+        -->
     </div>
     
     <footer>
