Cambios de tamaños
Cambio de tamaño de la presentacion y la descripcion

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div>
             <div class="informacion">
                 <p><strong>Nombre: </strong>Jason Welch</p>
+                <label>Ciudad: Buenos Aires</label>
                 <p><strong>Teléfono: </strong>012-3456789</p>
                 <p><strong>Edad: </strong>33</p>
-            <p></p>
             </div>
         </div>
     </div>
