Cambio de Barra de Navegacion
La barra de navegacion ahora es de posicion "fixed"

Tambien se agrego "grid" a la descripcion de la persona

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="barra">
         <i class="fa-solid fa-code" id="icono-header"></i>
         <ul id="barra-lista">
-            <li><a href="index.html" >Inicio</a></li>
+            <li><a href="#" >Inicio</a></li>
+            <li><a href="#desc" >Sobre Mi</a></li>
             <li><a href="#" >Proyectos</a></li>
             <li><a href="#" >Contacto</a></li>
         </ul>
@@ -31,21 +32,26 @@
 
     <!--Body-->
 
-    <div class="descripcion">
+    <div class="descripcion" id="desc">
         <img id="perfil" src="img/08.jpg" alt="Imagen de una persona de traje, de brazos cruzados">
         <div class="descripcion-contenedor">
             <div class="sobre-mi">
                 <h2>Sobre mi</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque possimus mollitia eos corrupti harum soluta nihil facilis facere, quidem cupiditate? Harum obcaecati natus repudiandae, deserunt ullam consequatur reiciendis assumenda.</p>
             </div>
-            <div class="informacion">
-                <p><strong>Nombre: </strong>Jason Welch</p>
-                <label>Ciudad: Buenos Aires</label>
-                <p><strong>Teléfono: </strong>012-3456789</p>
-                <p><strong>Edad: </strong>33</p>
+            <div class="contenedor-grid">
+                <div class="grid-item"><strong>Nombre: </strong>Jason Welch</div>
+                <div class="grid-item"><strong>Teléfono: </strong>012-3456789</div>
+                <div class="grid-item"><strong>Edad: </strong> 33</div>
+                <div class="grid-item"><strong>Direccion:</strong> 7287 Preston Rd</div>
+                <div class="grid-item"><strong>Experiencia: </strong> 6 Años</div>
+                <div class="grid-item"><strong>Email: </strong> JasonWelch@example.com</div>
             </div>
         </div>
     </div>
+
+    <!--Footer-->
+
     <footer>
         <a href="https://github.com/DeDominicisAlan" >
             <i class="fa-brands fa-github"></i>
