Agregado de seccion "Habilidades"
Se agrego la seccion de habilidades que contiene los lenguajes con sus respectivos iconos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul id="barra-lista">
             <li><a href="#" >Inicio</a></li>
             <li><a href="#desc" >Sobre Mi</a></li>
-            <li><a href="#" >Proyectos</a></li>
+            <li><a href="#contenedor-habilidades" >Habilidades</a></li>
             <li><a href="#" >Contacto</a></li>
         </ul>
     </div>
@@ -46,6 +46,36 @@
                 <div class="grid-item"><strong>Direccion:</strong> 7287 Preston Rd</div>
                 <div class="grid-item"><strong>Experiencia: </strong> 6 Años</div>
                 <div class="grid-item"><strong>Email: </strong> JasonWelch@example.com</div>
+            </div>
+        </div>
+    </div>
+
+    <div id="contenedor-habilidades">
+        <h2 id="h2-habilidades">Habilidades</h2>
+        <div id="habilidades">
+            <div class="habilidades-item">
+                <h2>HTML</h2>
+                <img src="/img/iconos/html.png" alt="Logo de HTML" class="icon">
+            </div>
+            <div class="habilidades-item">
+                <h2>CSS</h2>
+                <img src="/img/iconos/css.png" alt="Logo de CSS" class="icon">
+            </div>
+            <div class="habilidades-item">
+                <h2>JavaScript</h2>
+                <img src="/img/iconos/js.jpg" alt="Logo de JavaScript" class="icon">
+            </div>
+            <div class="habilidades-item">
+                <h2>Git</h2>
+                <img src="/img/iconos/git.png" alt="Logo de Git" class="icon">
+            </div>
+            <div class="habilidades-item">
+                <h2>MySQL</h2>
+                <img src="/img/iconos/mysql.png" alt="Logo de MySQL" class="icon" id="sql">
+            </div>
+            <div class="habilidades-item">
+                <h2>PHP</h2>
+                <img src="/img/iconos/php.png" alt="Logo de PHP" class="icon" id="php">
             </div>
         </div>
     </div>
