Agregado de seccion contacto

--- a/index.html
+++ b/index.html
@@ -50,34 +50,61 @@
         </div>
     </div>
 
+    <!--Habilidades-->
+
     <div id="contenedor-habilidades">
         <h2 id="h2-habilidades">Habilidades</h2>
         <div id="habilidades">
             <div class="habilidades-item">
                 <h2>HTML</h2>
-                <img src="/img/iconos/html.png" alt="Logo de HTML" class="icon">
+                <img src="./img/iconos/html.png" alt="Logo de HTML" class="icon">
             </div>
             <div class="habilidades-item">
                 <h2>CSS</h2>
-                <img src="/img/iconos/css.png" alt="Logo de CSS" class="icon">
+                <img src="./img/iconos/css.png" alt="Logo de CSS" class="icon">
             </div>
             <div class="habilidades-item">
                 <h2>JavaScript</h2>
-                <img src="/img/iconos/js.jpg" alt="Logo de JavaScript" class="icon">
+                <img src="./img/iconos/js.jpg" alt="Logo de JavaScript" class="icon">
             </div>
             <div class="habilidades-item">
                 <h2>Git</h2>
-                <img src="/img/iconos/git.png" alt="Logo de Git" class="icon">
+                <img src="./img/iconos/git.png" alt="Logo de Git" class="icon">
             </div>
             <div class="habilidades-item">
                 <h2>MySQL</h2>
-                <img src="/img/iconos/mysql.png" alt="Logo de MySQL" class="icon" id="sql">
+                <img src="./img/iconos/mysql.png" alt="Logo de MySQL" class="icon" id="sql">
             </div>
             <div class="habilidades-item">
                 <h2>PHP</h2>
-                <img src="/img/iconos/php.png" alt="Logo de PHP" class="icon" id="php">
+                <img src="./img/iconos/php.png" alt="Logo de PHP" class="icon" id="php">
             </div>
         </div>
+    </div>
+
+    <!--Contacto-->
+
+    <div class="contacto">
+        <h2>Contacto</h2>
+        <form>
+            <div class="contacto-item">
+                <h3>Nombre</h3>
+                <input type="text">
+            </div>
+            <div class="contacto-item">
+                <h3>Apellido</h3>
+                <input type="text">
+            </div>
+            <div class="contacto-item">
+                <h3>Email</h3>
+                <input type="email">
+            </div>
+            <div class="contacto-item">
+                <h3>Mensaje</h3>
+                <input type="text">
+            </div>
+            <input type="submit" value="Enviar">
+        </form>
     </div>
 
     <!--Footer-->
