--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="habilidades">
             <div class="habilidades-item">
                 <h2>HTML</h2>
-                <img src="../img/iconos/html.png" alt="Logo de HTML" class="icon">
+                <img src="./img/iconos/html.png" alt="Logo de HTML" class="icon">
             </div>
             <div class="habilidades-item">
                 <h2>CSS</h2>
