Seccion de proyectos terminada

--- a/index.html
+++ b/index.html
@@ -91,16 +91,22 @@
     <div id="proyectos">
         <h2 id="proyectos-h2">Proyectos</h2>
         <ul id="proyectos-flex">
-            <li class="proyectos-item"> 
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium, placeat aliquid repellendus eius magnam nisi odio dolorem, nobis cupiditate in fugiat dolore numquam porro. Tempore nam placeat nesciunt reiciendis qui!
+            <li class="proyectos-item" id="Ejemplo1"> 
+                <div class="overlay">
+                    <p>Ejemplo 1</p>
+                </div>
             </li>
 
-            <li class="proyectos-item">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci expedita minus quidem, in asperiores similique saepe mollitia quisquam, eius placeat dolorem? Neque quisquam soluta dolorem ut ab reprehenderit sapiente tempore?
+            <li class="proyectos-item" id="Ejemplo2">
+                <div class="overlay">
+                    <p>Ejemplo 2</p>
+                </div>
             </li>
 
-            <li class="proyectos-item">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae saepe aut pariatur esse eum delectus voluptatem quae. Quo, vitae aut? Sed voluptate inventore ipsum unde, libero error cumque provident repudiandae.
+            <li class="proyectos-item" id="Ejemplo3">
+                <div class="overlay">
+                    <p>Ejemplo 3</p>
+                </div>
             </li>
         </ul>
     </div>
