Se agregaron ejemplos de proyectos

--- a/index.html
+++ b/index.html
@@ -92,21 +92,27 @@
         <h2 id="proyectos-h2">Proyectos</h2>
         <ul id="proyectos-flex">
             <li class="proyectos-item" id="Ejemplo1"> 
+                <a href="">
                 <div class="overlay">
                     <p>Ejemplo 1</p>
                 </div>
+                </a>
             </li>
 
             <li class="proyectos-item" id="Ejemplo2">
+                <a href="">
                 <div class="overlay">
                     <p>Ejemplo 2</p>
                 </div>
+                </a>
             </li>
 
             <li class="proyectos-item" id="Ejemplo3">
+                <a href="">
                 <div class="overlay">
-                    <p>Ejemplo 3</p>
+                    <p>Ejemplo 3<p/>
                 </div>
+                </a>
             </li>
         </ul>
     </div>
