Arreglo de navbar

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         <i class="fa-solid fa-code" id="icono-header"></i>
         <ul id="barra-lista">
             <li><a href="#" >Inicio</a></li>
-            <li><a href="#desc" >Sobre Mi</a></li>
+            <li><a href="#desc" >Perfil</a></li>
             <li><a href="#contenedor-habilidades" >Habilidades</a></li>
             <li><a href="#proyectos" >Proyectos</a></li>
             <li><a href="#cont" >Contacto</a></li>
         </ul>
+        <a class="icon" onclick="" id="barra-boton">
+            <i class="fa fa-bars"></i>
+          </a>
     </div>
     
     <!--Header-->
@@ -38,7 +41,7 @@
         <img id="perfil" src="img/08.jpg" alt="Imagen de una persona de traje, de brazos cruzados">
         <div class="descripcion-contenedor">
             <div class="sobre-mi">
-                <h2>Sobre mi</h2>
+                <h2>Perfil</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque possimus mollitia eos corrupti harum soluta nihil facilis facere, quidem cupiditate? Harum obcaecati natus repudiandae, deserunt ullam consequatur reiciendis assumenda.</p>
             </div>
             <div class="contenedor-grid">
