--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!--Header-->
     <div id="barra">
         <i class="fa-solid fa-code" id="icono-header"></i>
+        <a href="javascript:void(0)" onclick="funcion()">
+            <i class="fa-solid fa-bars" id="icono-barra"></i>
+        </a> 
         <ul id="barra-lista">
             <li><a href="#" >Inicio</a></li>
             <li><a href="#desc" >Perfil</a></li>
@@ -22,9 +25,7 @@
             <li><a href="#proyectos" >Proyectos</a></li>
             <li><a href="#cont" >Contacto</a></li>
         </ul>
-        <a class="icon" onclick="" id="barra-boton">
-            <i class="fa fa-bars"></i>
-          </a>
+               
     </div>
     
     <!--Header-->
@@ -43,14 +44,15 @@
             <div class="sobre-mi">
                 <h2>Perfil</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque possimus mollitia eos corrupti harum soluta nihil facilis facere, quidem cupiditate? Harum obcaecati natus repudiandae, deserunt ullam consequatur reiciendis assumenda.</p>
+                <!--Descripcion genérica de la Persona. No es real-->
             </div>
             <div class="contenedor-grid">
-                <div class="grid-item"><strong>Nombre: </strong>Jason Welch</div>
-                <div class="grid-item"><strong>Teléfono: </strong>012-3456789</div>
-                <div class="grid-item"><strong>Edad: </strong> 33</div>
-                <div class="grid-item"><strong>Direccion:</strong> 7287 Preston Rd</div>
-                <div class="grid-item"><strong>Experiencia: </strong> 6 Años</div>
-                <div class="grid-item"><strong>Email: </strong> JasonWelch@example.com</div>
+                <div class="grid-item"><strong>Nombre: </strong><p>Jason Welch</p></div>
+                <div class="grid-item"><strong>Teléfono: </strong><p>012-3456789</p></div>
+                <div class="grid-item"><strong>Edad: </strong> <p>33</p></div>
+                <div class="grid-item"><strong>Direccion:</strong> <p>7287 Preston Rd</p></div>
+                <div class="grid-item"><strong>Experiencia: </strong> <p>6 Años</p></div>
+                <div class="grid-item"><strong>Email: </strong> <p>JasonWelch@example.com</p></div>
             </div>
         </div>
     </div>
