Funcion cambio de color mejorada, cambio de imagenes en proyectos y cambio de tamaños generales

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div class="descripcion-contenedor">
             <div class="sobre-mi">
                 <h2>Perfil</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque possimus mollitia eos corrupti harum soluta nihil facilis facere, quidem cupiditate? Harum obcaecati natus repudiandae, deserunt ullam consequatur reiciendis assumenda.</p>
+                <p>Mi nombre es Jason Welch. Soy un programador Full Stack Freelance. Actualmente vivo en La Plata, Buenos Aires, Argentina. Soy muy apasionado y dedicado a mi trabajo. Con 6 años de experiencia como programador Full Stack. Tengo las habilidades necesarias para construir un fascinante sitio web de gran calidad.</p>
                 <!--Descripcion genérica de la Persona. No es real-->
             </div>
             <div class="contenedor-grid">
                 <div class="grid-item"><strong>Nombre: </strong><p>Jason Welch</p></div>
                 <div class="grid-item"><strong>Teléfono: </strong><p>012-3456789</p></div>
                 <div class="grid-item"><strong>Edad: </strong> <p>33</p></div>
-                <div class="grid-item"><strong>Direccion:</strong> <p>7287 Preston Rd</p></div>
+                <div class="grid-item"><strong>Direccion:</strong> <p>La Plata, Argentina</p></div>
                 <div class="grid-item"><strong>Experiencia: </strong> <p>6 Años</p></div>
                 <div class="grid-item"><strong>Email: </strong> <p>JasonWelch@example.com</p></div>
             </div>
