--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/iconos/favicon.ico">
-    <title>CV</title>
+    <title>CV Argentina Programa</title>
 </head>
 <body>
     <!--Header-->
